--- a/css/style.css
+++ b/css/style.css
@@ -1,52 +1,16 @@
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
-    scroll-behavior: smooth;
+.ul-header{
+    margin:auto;
 }
-header{
-    width: 100%;
-    height: 68px;
-    position: fixed;
-    background-color: #f0f0f0;
-    display: flex;
-    z-index: 1000;
-    justify-content: space-between;
-    text-align: center;
-    padding: 20px 100px;
-}
-.loge{
-    height: 60px;
-    margin-top: -20px;
-}
-.hrline{
-    width: 105px;
-    height: 6px;
-    background-color: #3a6cf4;
-    border-radius: 10px;
-    margin-left: 620px;
-    margin-top: -10px;
-    margin-bottom: 40px;
-    border: 0;
-    box-shadow: 1px 1px 3px #000000;
-
-}
-.navigation a{
+#a-ul-header{
     text-decoration: none;
     font-weight: 550;
     font-size: 1.3em;
     color: #3a6cf4;
     padding-left: 30px;
     text-shadow: .5px .5px 1px #000000;
-
 }
-.navigation a:hover{
-    color: rgb(33, 33, 231);
-}
-main{
+#main-page{
     background: url(../pictures/background-1.png) no-repeat;
-    width: 100%;
     min-height: 100vh;
     background-size: cover;
     background-position: center;
@@ -54,36 +18,34 @@ main{
     display: flex;
     align-items: center;
 }
-main h2{
-    color: #fff;
-    font-size: 1.4em;
-    font-weight: 500;
-}
-main p{
-    display: inline-block;
+.h1-main{
     font-size: 3em;
     color: #0827b1;
     font-weight: 700;
-    margin-top: 30px;
     text-shadow: 1px 1px 5px #ffffff;
 }
-main span{
-    color: #f3f3f7;
-    font-size: 1.3em;
-    font-weight: 600;
-    
-}
-.div-main{
-    padding-left: 180px;
-}
-.div-main h3{
-    color: #fff;
-    font-size: 2em;
+.h1-main-span{
+    font-size: .5em;
+    color: #ffffff;
     font-weight: 700;
-    padding:20px 0px ;
-    letter-spacing: 1px;
+    text-shadow: 1px 1px 5px #0827b1;
 }
-.div-main .main-btn{
+.social-icons a{
+    font-size: 1.7em;
+    color: #fff;
+    padding-right: 30px;
+}
+/* /////////////////////////////////////////////////////// */
+.social-icons .l:hover,.social-icons .f:hover,.social-icons .t:hover{
+    color: #1b53eb;
+    text-shadow: 2px 2px 10px #fff;
+}
+.social-icons .i:hover{
+    color: #f0308a;
+    text-shadow: 2px 2px 10px #fff;
+}
+/* ////////////////////////////////////////////////////////////////// */
+.main-btn{
     background-color: #0837b9;
     text-decoration: none;
     color: #fff;
@@ -97,146 +59,50 @@ main span{
     letter-spacing: 1px;
     transition: .7s ease;
 }
-.div-main .main-btn:hover{
+.main-btn:hover{
     background-color: #083cca;
     transform: scale(1.1);
 }
-.social-icons a{
-    font-size: 1.7em;
-    color: #fff;
-    padding-right: 30px;
+.hr-services{
+    background-color: #3a6cf4;
+    box-shadow: 1px 1px 3px #000000;
 }
-.cards{
-    width: 100%;
-    min-height: 100vh;
-}
-.title {
-    display: flex;
-    justify-content: center;
+.h1-services{
+    font-weight: 700;
     color: #3a6cf4;
-    font-size: 2.2em;
-    font-weight: 800;
-    margin-bottom: 30px;
-    padding-top: 100px;
     text-shadow: 1px 1px 3px #000000;
 }
 
-.content {
-    display: flex;
-    justify-content: center;
-    flex-direction: row;
-    flex-wrap: wrap;
+.icon{
+    font-size: 80px;
+    color: #083cca;
 }
-
 .card {
-    background-color: #fff;
-    width: 22.25em;
     box-shadow: 0 5px 25px rgba(1 1 1 / 15%);
-    border-radius: 10px;
-    padding: 25px;
-    margin: 20px;
     transition: 0.7s ease;
 }
 
 .card:hover {
     transform: scale(1.1);
 }
-
-.card .icon {
-    color: #3a6cf4;
-    font-size: 7em;
-    text-align: center;
-}
-
-.info {
-    text-align: left;
-}
 .card h3{
     color: #3a6cf4;
     font-size: 1.5em;
     font-weight: 700;
-    text-align: center;
 }
 .info p{
-    margin: 20px 0px;
-    font-size: 1.2em;
+    font-size: 1.1em;
+    font-weight: 550;
+
 }
+
 .projects {
     background-color: #000016;
-}
-
-.projects .content{
-    margin-top: 30px;
-}
-
-.project-card {
-    background-color: #fff;
-    border: 1px solid #fff;
-    min-height: 14em;
-    width: 23em;
-    overflow: hidden;
-    border-radius: 10px;
-    margin: 20px;
-    transition: 0.7s ease;
-}
-
-.project-card:hover {
-   transform: scale(1.1);
-}
-
-.project-card:hover .project-image {
-    opacity: 0.9;
- }
-
-.project-image img{
-    width: 100%
-}
-
-.project-info {
-    padding: 1em;
-}
-
-.project-category {
-    font-size: .8em;
-    color: #000;
-}
-
-.project-title {
-    display: flex;
-    justify-content: space-between;
-    text-transform: uppercase;
-    font-weight: 800;
-    margin-top: 10px;
-}
-
-.more-details {
-    text-decoration: none;
-    color: #3a6cf4;
-}
-
-.more-details:hover {
-    color: #601cfc;
-}
-
-.contact .icon{
-    font-size: 4.5em;
-}
-
-.contact .info h3 {
-    color: #000;
-}
-
-.contact .info p {
-    font-size: 1.5em;
-    text-align: center;
 }
 
 .footer {
     background-color: #000016;
     color: #d3d3d3;
-    padding: 2em;
-    display: flex;
-    justify-content: space-between;
 }
 
 .footer-title {
@@ -251,68 +117,5 @@ main span{
 
 .footer .social-icons a{
     font-size: 1.8em;
-    padding: 0 15px 0 0;
     color: #fff;
-}
-/* /////////////////////////////////////////////////////// */
-    .social-icons .l:hover,.social-icons .f:hover,.social-icons .t:hover{
-        color: #1b53eb;
-        text-shadow: 2px 2px 10px #fff;
-    }
-    .social-icons .i:hover{
-        color: #f0308a;
-        text-shadow: 2px 2px 10px #fff;
-    }
-/* /////////////////////////////////////////////////// */
-@media (max-width:1023px){
-    header{
-        padding: 12px 20px;
-    }
-
-    .navigation a{
-        padding-left: 10px;
-    }
-
-    .title{
-        font-size: 1.8em;
-    }
-
-    section{
-        padding: 80px 20px;
-    }
-
-    .main-content h2{
-        font-size: 1em;
-    }
-
-    .main-content h3{
-        font-size: 1.6em;
-    }
-
-    .content{
-        flex-direction: column;
-        align-items: center;
-    }
-
-}
-
-@media (max-width:641px){
-    body{
-        font-size: 12px;
-    }
-
-    .main-content h2{
-        font-size: 0.8em;
-    }
-
-    .main-content h3{
-        font-size: 1.4em;
-    }
-}
-
-@media (max-width:300px){
-    body{
-        font-size: 10px;
-     
-    }
 }
